fixing reader spacing and sizing

--- a/reader/style.css
+++ b/reader/style.css
@@ -26,7 +26,7 @@ h1{
 h2{
     font-family: 'Extraoin';
     color: rgb(250, 22, 22);
-    font-size: 32px;
+    font-size: 40px;
     text-align: center;
 }
 
